fixed issues with justified text on safari

--- a/src/app/components/verse-section/verse-section.component.css
+++ b/src/app/components/verse-section/verse-section.component.css
@@ -35,7 +35,3 @@
 a {
   color: var(--text-color);
 }
-
-.line-break {
-  display: block;
-}
